Lab8 - DataBases - DataBase App  final v0.8

--- a/Lab8/src/DataBases/App.fxml
+++ b/Lab8/src/DataBases/App.fxml
@@ -37,7 +37,7 @@
       <Pane layoutX="567.0" layoutY="29.0" prefHeight="571.0" prefWidth="237.0">
          <children>
             <Button fx:id="showButton" layoutX="52.0" layoutY="45.0" mnemonicParsing="false" onAction="#showAll" prefHeight="42.0" prefWidth="133.0" text="Show all datas" />
-            <Button fx:id="addBookBtn" layoutX="52.0" layoutY="106.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="133.0" text="Add new book" />
+            <Button fx:id="addBookBtn" layoutX="52.0" layoutY="106.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="133.0" onAction="#addNewBook" text="Add new book" />
             <Label layoutX="74.0" layoutY="240.0" prefHeight="20.0" prefWidth="102.0" style="-fx-font-size: 16px;" text="Search Panel">
                <font>
                   <Font size="16.0" />
