--- a/Lab8/src/DataBases/App.fxml
+++ b/Lab8/src/DataBases/App.fxml
@@ -43,11 +43,11 @@
                   <Font size="16.0" />
                </font>
             </Label>
-            <CheckBox layoutX="32.0" layoutY="277.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="93.0" text="author" />
-            <CheckBox layoutX="32.0" layoutY="365.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="76.0" text="isbn" />
-            <TextField layoutX="33.0" layoutY="311.0" style="-fx-background-color: white;" />
-            <TextField layoutX="33.0" layoutY="392.0" style="-fx-background-color: white;" />
-            <Button fx:id="searchButton" layoutX="87.0" layoutY="446.0" mnemonicParsing="false" text="Search" />
+            <CheckBox layoutX="32.0" layoutY="277.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="93.0" fx:id="checkA" text="author" />
+            <CheckBox layoutX="32.0" layoutY="365.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="76.0" fx:id="checkI" text="isbn" />
+            <TextField layoutX="33.0" layoutY="311.0" style="-fx-background-color: white;"  fx:id="AuthorName" />
+            <TextField layoutX="33.0" layoutY="392.0" style="-fx-background-color: white;" fx:id="IsbnName" />
+            <Button fx:id="searchButton" layoutX="87.0" layoutY="446.0" mnemonicParsing="false" onAction="#searchBooks" text="Search" />
          </children>
       </Pane>
       <Button fx:id="connectButton" layoutX="258.0" layoutY="16.0" mnemonicParsing="false" onAction="#connectDB" prefHeight="27.0" prefWidth="288.0" text="Connect with Database" />
