--- a/Lab8/src/DataBases/Failure.fxml
+++ b/Lab8/src/DataBases/Failure.fxml
@@ -5,14 +5,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="290.0" prefWidth="444.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="DataBases.FailureController">
+<AnchorPane id="AnchorPane" prefHeight="239.0" prefWidth="444.0" style="-fx-background-color: #71BBD0;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DataBases.FailureController">
    <children>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="41.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="147.0" fitWidth="177.0" layoutX="45.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@sad.jpg" />
          </image>
       </ImageView>
-      <Text layoutX="235.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 26px;" text="I am sorry... too many fail attempts" wrappingWidth="156.6484375" />
+      <Text layoutX="245.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 26px;" text="I am sorry... too many fail attempts" wrappingWidth="156.6484375" />
    </children>
 </AnchorPane>
