Lab8 - DataBases - DataBase App  final v3.0 - POZDRAWIAM CIEPLUTKO

--- a/Lab8/src/DataBases/App.fxml
+++ b/Lab8/src/DataBases/App.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #ebebeb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DataBases.AppController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgba(171,213,225,0.2);" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DataBases.AppController">
     <stylesheets>
         <URL value="@app.css" />
     </stylesheets>
